Added docker file